--- a/composer.json
+++ b/composer.json
@@ -32,11 +32,12 @@
 		"spacedealer/here-api": "0.1.*"
 	},
 	"require-dev": {
-		"phpunit/phpunit": "4.4.*"
+		"phpunit/phpunit": "4.6.*"
 	},
 	"autoload": {
 		"psr-4": {
-			"spacedealer\\here\\": "src/"
+			"spacedealer\\here\\": "src/",
+			"spacedealer\\tests\\here\\": "tests/"
 		}
 	}
 }
