--- a/.sensiolabs.yml
+++ b/.sensiolabs.yml
@@ -1,3 +1,3 @@
 pre_composer_script: |
     #!/bin/bash
-    composer global require "fxp/composer-asset-plugin:1.0.0-beta4"
+    composer global require "fxp/composer-asset-plugin:1.0.0"
